[tool.poetry]
name = "pythonoop"
version = "0.1.0"
description = ""
authors = ["Олег Т. <olegtimer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"


[tool.poetry.group.def.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
